--- a/html/Signup.html
+++ b/html/Signup.html
@@ -4,6 +4,7 @@
 	<title>Sign-up</title>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/forms.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
@@ -98,9 +99,21 @@
 				<option>28</option>
 				<option>29</option>
 				<option>30</option>
+				<option>31</option>
 			</select>
 			<select>
 				<option> </option>
+				<option>1980</option>
+				<option>1981</option>
+				<option>1982</option>
+				<option>1983</option>
+				<option>1984</option>
+				<option>1985</option>
+				<option>1986</option>
+				<option>1987</option>
+				<option>1988</option>
+				<option>1989</option>
+				<option>1990</option>
 				<option>1991</option>
 				<option>1992</option>
 				<option>1993</option>
@@ -115,13 +128,6 @@
 				<option>2002</option>
 				<option>2003</option>
 				<option>2004</option>
-				<option>2005</option>
-				<option>2006</option>
-				<option>2007</option>
-				<option>2008</option>
-				<option>2009</option>
-				<option>2010</option>
-				<option>2011</option>
 			</select>
 		</label>
 		</div>
@@ -161,8 +167,8 @@
 
           <div class="col-md-4 col-sm-6 col-xs-12">
             <ul class="social-icons">
-              <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
+              <li><a class="facebook" target="_blank" href="https://www.facebook.com/JuliusJhonNavarro/"><i class="fa fa-facebook"></i></a></li>
+              <li><a class="linkedin" target="_blank" href="https://www.linkedin.com/in/juliusnavarro/"><i class="fa fa-linkedin"></i></a></li>   
             </ul>
           </div>
         </div>
