--- a/html/upload.html
+++ b/html/upload.html
@@ -4,6 +4,7 @@
 	<title>Upload new photo</title>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/upload.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
@@ -46,8 +47,8 @@
  				</div>
  				<br><br>
  				<div>
- 					<input type="submit">
- 					<button>Discard</button>
+ 					<input class="button" type="submit">
+ 					<button class="button">Discard</button>
  				</div>
 			</form>
 			
