--- a/html/Login.html
+++ b/html/Login.html
@@ -3,7 +3,8 @@
 <head>
 	<title>Log-In</title>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../css/forms.css">
+  <link rel="stylesheet" type="text/css" href="../css/forms.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
@@ -76,8 +77,8 @@
 
           <div class="col-md-4 col-sm-6 col-xs-12">
             <ul class="social-icons">
-              <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
+              <li><a class="facebook" target="_blank" href="https://www.facebook.com/JuliusJhonNavarro/"><i class="fa fa-facebook"></i></a></li>
+              <li><a class="linkedin" target="_blank" href="https://www.linkedin.com/in/juliusnavarro/"><i class="fa fa-linkedin"></i></a></li>  
             </ul>
           </div>
         </div>
